[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
hyper = { version = "1", features = ["full"] }
